<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="authority">com.scratch</string>
    <string name="app_name">Scratch</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="name_label">Name : </string>
    <string name="name_hint">Enter task name</string>
    <string name="details_label">Details : </string>
    <string name="details_hint">Enter details</string>
    <string name="due_date_button">Set Due Date</string>
    <string name="time_due_button">Set Time Due</string>
    <string name="done_button">Done</string>
    <string name="make_recurring_button">Make Recurring</string>
    <string name="change_recurrence_button">Change Recurrence</string>
    <string name="make_one_time_button">Make One-Time</string>
    <string name="reminder_date_button">Set Reminder Date</string>
    <string name="reminder_time_button">Set Reminder Time</string>
    <string name="set_task_complete">Set Task Complete</string>
    <string name="action_delete">Delete</string>
    <string name="action_new">Create New Task</string>
    <string name="action_change_lists">Change Lists</string>
    <string name="settings">Settings</string>
    <string name="title_new_task">Create New Task</string>
    <string name="title_edit_task">Edit Task</string>
    <string name="title_make_recurring_task">Make Recurring Task</string>
    <string name="title_make_daily_recurring_task">Make Daily Recurring Task</string>
    <string name="title_make_weekly_recurring_task">Make Weekly Recurring Task</string>
    <string name="title_make_monthly_recurring_task">Make Monthly Recurring Task</string>
    <string name="title_make_yearly_recurring_task">Make Yearly Recurring Task</string>
    
    <string name="description_make_recurring_task">Task Occurs : </string>
    <string name="description_number_picker">Task occurs every </string>
    <string name="description_2_make_daily_recurring_task">on these days : </string>
    <string name="description_2_make_weekly_recurring_task">week(s) on : </string>
    <string name="description_2_make_monthly_recurring_task">month(s) on : </string>
    <string name="description_2_make_yearly_recurring_task">year(s), starting : </string>
    
    <string name="recurring_time_due_text">At : </string>
    <string name="day">Day </string>
    <string name="the">The </string>
    <string name="of_the_month">of the month </string>
    <string name="of">of </string>
    
    <string name="one_time">One-Time</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    
    <string name="first">1st</string>
    <string name="second">2nd</string>
    <string name="third">3rd</string>
    <string name="fourth">4th</string>
    <string name="last">Last</string>
    
    <string name="invalid_name_toast">The task name has not been set</string>
    
    <string name="delete_confirmation_message">Delete this task?</string>
    <string name="confirmation_dialog_ok">OK</string>
    <string name="confirmation_dialog_cancel">Cancel</string>
    
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    
    <string name="unknown">Unknown</string>   
    
    <string name="default_font">fonts/Roboto-Light.ttf</string>
    <string name="scheduling_svc_channel_name">TaskSchedulingChannel</string>
    <string name="scheduling_svc_channel_description">Task Scheduling Notification Channel</string>
    <string name="restart_svc_channel_name">RestartTaskSchedulingService</string>
    <string name="restart_svc_description">Restart Task Scheduling Foreground Service</string>

</resources>
