<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/make_recurring_task_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Title -->

    <TextView
        android:id="@+id/title_make_recurring_task"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/green"
        android:gravity="center_horizontal"
        android:text="@string/title_make_recurring_task"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/description_make_recurring_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_make_recurring_task"
        android:layout_marginTop="30dip"
        android:text="@string/description_make_recurring_task"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/radiobutton_one_time_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_make_recurring_task"
        android:layout_marginTop="15dip"
        android:onClick="onRadioButtonClicked" />

    <TextView
        android:id="@+id/label_radiobutton_one_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/radiobutton_one_time_task"
        android:layout_below="@id/description_make_recurring_task"
        android:layout_marginTop="15dip"
        android:layout_toRightOf="@id/radiobutton_one_time_task"
        android:gravity="left|center_vertical"
        android:text="@string/one_time"
        android:textSize="17sp" />

    <RadioButton
        android:id="@+id/radiobutton_daily_make_recurring_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiobutton_one_time_task"
        android:onClick="onRadioButtonClicked" />

    <TextView
        android:id="@+id/label_radiobutton_daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/radiobutton_daily_make_recurring_task"
        android:layout_below="@id/label_radiobutton_one_time"
        android:layout_toRightOf="@id/radiobutton_daily_make_recurring_task"
        android:gravity="left|center_vertical"
        android:text="@string/daily"
        android:textSize="17sp" />

    <RadioButton
        android:id="@+id/radiobutton_weekly_make_recurring_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiobutton_daily_make_recurring_task"
        android:onClick="onRadioButtonClicked" />

    <TextView
        android:id="@+id/label_radiobutton_weekly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/radiobutton_weekly_make_recurring_task"
        android:layout_below="@id/label_radiobutton_daily"
        android:layout_toRightOf="@id/radiobutton_weekly_make_recurring_task"
        android:gravity="left|center_vertical"
        android:text="@string/weekly"
        android:textSize="17sp" />

    <RadioButton
        android:id="@+id/radiobutton_monthly_make_recurring_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiobutton_weekly_make_recurring_task"
        android:onClick="onRadioButtonClicked" />

    <TextView
        android:id="@+id/label_radiobutton_monthly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/radiobutton_monthly_make_recurring_task"
        android:layout_below="@id/label_radiobutton_weekly"
        android:layout_toRightOf="@id/radiobutton_monthly_make_recurring_task"
        android:gravity="left|center_vertical"
        android:text="@string/monthly"
        android:textSize="17sp" />

    <RadioButton
        android:id="@+id/radiobutton_yearly_make_recurring_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiobutton_monthly_make_recurring_task"
        android:onClick="onRadioButtonClicked" />

    <TextView
        android:id="@+id/label_radiobutton_yearly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/radiobutton_yearly_make_recurring_task"
        android:layout_below="@id/label_radiobutton_monthly"
        android:layout_toRightOf="@id/radiobutton_yearly_make_recurring_task"
        android:gravity="left|center_vertical"
        android:text="@string/yearly"
        android:textSize="17sp" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="doneButtonClicked"
        android:text="@string/done_button" />

</RelativeLayout>