<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfont="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
<RelativeLayout
    android:id="@+id/make_weekly_recurring_task_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/title_make_weekly_recurring_task"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/green"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:text="@string/title_make_weekly_recurring_task"
        customfont:name="Roboto-Light.ttf"/>
    
    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/description_make_weekly_recurring_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/regularity"
        android:layout_alignBottom="@id/regularity"
        android:gravity="left|center_vertical"
        android:textSize="20sp"
        android:layout_below="@id/title_make_weekly_recurring_task"
        android:text="@string/description_number_picker"
        customfont:name="Roboto-Light.ttf" />
    
    <NumberPicker
        android:id="@id/regularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/description_make_weekly_recurring_task"        
        android:layout_marginTop="80dip"/>
        
    <com.scratch.gui.custom.CustomTextView 
        android:id="@+id/description_2_make_weekly_recurring_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/regularity"      
        android:layout_below="@id/title_make_weekly_recurring_task"        
        android:layout_alignTop="@id/regularity"
        android:layout_alignBottom="@id/regularity"
        android:gravity="left|center_vertical"
        android:textSize="20sp"
        android:text="@string/description_2_make_weekly_recurring_task"
        customfont:name="Roboto-Light.ttf"/>
    
    <CheckBox
        android:id="@+id/checkbox_monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/regularity"
        android:layout_marginTop="10dip" />
    
    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/regularity"
        android:layout_toRightOf="@id/checkbox_monday"
        android:layout_alignBottom="@id/checkbox_monday"
        android:layout_marginTop="10dip"
        android:gravity="left|center_vertical"
        android:textSize="17sp"
        android:text="@string/monday"
        customfont:name="Roboto-Light.ttf"/>
    
    <CheckBox
        android:id="@+id/checkbox_tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_monday"
        android:layout_marginTop="1dip" />
    
    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/checkbox_tuesday"
        android:layout_alignBottom="@id/checkbox_tuesday"
        android:layout_below="@id/monday"
        android:gravity="left|center_vertical"
        android:textSize="17sp"
        android:text="@string/tuesday"
        customfont:name="Roboto-Light.ttf"/>
    
    <CheckBox
        android:id="@+id/checkbox_wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_tuesday"
        android:layout_marginTop="1dip" />
    
    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/checkbox_wednesday"
        android:layout_alignBottom="@id/checkbox_wednesday"
        android:layout_below="@id/tuesday"
        android:gravity="left|center_vertical"
        android:textSize="17sp"
        android:text="@string/wednesday"
        customfont:name="Roboto-Light.ttf"/>
    
    <CheckBox
        android:id="@+id/checkbox_thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_wednesday"
        android:layout_marginTop="1dip" />
    
    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/checkbox_thursday"
        android:layout_alignBottom="@id/checkbox_thursday"
        android:layout_below="@id/wednesday"
        android:gravity="left|center_vertical"
        android:textSize="17sp"
        android:text="@string/thursday"
        customfont:name="Roboto-Light.ttf"/>
    
    <CheckBox
        android:id="@+id/checkbox_friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_thursday"
        android:layout_marginTop="1dip" />
    
    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/checkbox_friday"
        android:layout_alignBottom="@id/checkbox_friday"
        android:layout_below="@id/thursday"
        android:gravity="left|center_vertical"
        android:textSize="17sp"
        android:text="@string/friday"
        customfont:name="Roboto-Light.ttf"/>
    
    <CheckBox
        android:id="@+id/checkbox_saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_friday"
        android:layout_marginTop="1dip" />
    
    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/checkbox_saturday"
        android:layout_alignBottom="@id/checkbox_saturday"
        android:layout_below="@id/friday"
        android:gravity="left|center_vertical"
        android:textSize="17sp"
        android:text="@string/saturday"
        customfont:name="Roboto-Light.ttf"/>
    
    <CheckBox
        android:id="@+id/checkbox_sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_saturday"
        android:layout_marginTop="1dip" />
    
    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/checkbox_sunday"
        android:layout_alignBottom="@id/checkbox_sunday"
        android:layout_below="@id/saturday"
        android:gravity="left|center_vertical"
        android:textSize="17sp"
        android:text="@string/sunday"
        customfont:name="Roboto-Light.ttf"/>
    
    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/time_due_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/checkbox_sunday"           
        android:layout_alignTop="@+id/time_due"
        android:layout_alignBottom="@id/time_due"
        android:gravity="left|center_vertical"
        android:textSize="20sp"
        android:text="@string/recurring_time_due_text"
        customfont:name="Roboto-Light.ttf"/>
    
    <TimePicker 
        android:id="@id/time_due"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/time_due_label"
        android:layout_below="@id/sunday"
        android:layout_marginTop="10dp" />
    
    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_due"
        android:layout_marginTop="25dip"
        android:layout_centerHorizontal="true"
        android:text="@string/done_button"
        android:onClick="doneButtonClicked" />
    
</RelativeLayout>

</ScrollView>