<?xml version="1.0" encoding="utf-8"?>

<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfont="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
<RelativeLayout 
    android:id="@+id/make_monthly_recurring_task_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/title_make_monthly_recurring_task"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:background="@color/green"
        android:text="@string/title_make_monthly_recurring_task"
        android:textSize="30sp"
        customfont:name="Roboto-Light.ttf"/>

    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/description_number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dip"
        android:textSize="20sp"
        android:layout_below="@id/title_make_monthly_recurring_task"
        android:text="@string/description_number_picker"
        customfont:name="Roboto-Light.ttf" />
    
    <NumberPicker
        android:id="@+id/regularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_marginTop="80dip"
        android:layout_toRightOf="@id/description_number_picker"/>
        
    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/description_2_make_monthly_recurring_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/regularity"
        android:layout_below="@id/title_make_monthly_recurring_task"
        android:layout_marginTop="60dip"
        android:textSize="20sp"
        android:text="@string/description_2_make_monthly_recurring_task"
        customfont:name="Roboto-Light.ttf" />
    
    <RadioButton 
        android:id="@+id/day_picker_radiobutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/regularity"
        android:layout_marginTop="60dip"
        android:onClick="onRadioButtonClicked"/>
    
    <com.scratch.gui.custom.CustomTextView 
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/day_picker_radiobutton"
        android:layout_alignBottom="@id/day_picker_radiobutton"
        android:layout_below="@id/regularity"
        android:layout_marginTop="60dip"
        android:gravity="left|center_vertical"
        android:textSize="17sp"
        android:text="@string/day"
        customfont:name="Roboto-Light.ttf"/>
    
    <NumberPicker 
        android:id="@+id/day_number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/day"
        android:layout_below="@id/regularity"
        android:layout_marginTop="20dip"/>
    
    <RadioButton 
        android:id="@+id/weeknum_picker_radiobutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="55dip"
        android:layout_below="@id/day_number_picker"
        android:onClick="onRadioButtonClicked"/>
    
    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/the"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/day_number_picker"
        android:layout_toRightOf="@id/weeknum_picker_radiobutton"
        android:layout_alignBottom="@id/weeknum_picker_radiobutton"
        android:layout_marginTop="55dip"
        android:gravity="left|center_vertical"
        android:textSize="17sp"
        android:text="@string/the"
        customfont:name="Roboto-Light.ttf"/>
    
    <NumberPicker
        android:id="@+id/weeknum_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/day_number_picker"
        android:layout_toRightOf="@id/the"
        android:layout_marginTop="10dip"/>
        
    <NumberPicker
        android:id="@+id/weekday_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/day_number_picker"
        android:layout_toRightOf="@id/weeknum_picker"
        android:layout_marginTop="10dip"/>
    
    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/of_the_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/weekday_picker"
        android:layout_alignBottom="@id/weekday_picker"
        android:layout_below="@id/day_number_picker"
        android:layout_marginTop="20dip"
        android:gravity="left|center_vertical"
        android:textSize="17sp"
        android:text="@string/of_the_month"
        customfont:name="Roboto-Light.ttf"/>
    
    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/time_due_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/weeknum_picker"
        android:layout_marginTop="70dip"
        android:textSize="17sp"
        android:text="@string/recurring_time_due_text"
        customfont:name="Roboto-Light.ttf"/>
    
    <TimePicker 
        android:id="@+id/time_due"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/time_due_label"
        android:layout_below="@id/weeknum_picker"
        android:layout_marginTop="20dip"/>
    
    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/time_due"
        android:layout_marginTop="20dip"
        android:text="@string/done_button"
        android:onClick="doneButtonClicked" />
    
</RelativeLayout>

</ScrollView>