<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfont="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recurrence_reminder_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.scratch.gui.custom.CustomButton
        android:id="@+id/time_due_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/due_date_button"
        android:onClick="timeDueButtonClicked"
        android:text="@string/time_due_button"
        android:textSize="15sp"
        customfont:name="Roboto-Light.ttf" />

    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/time_due_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"        
        android:layout_alignTop="@id/time_due_button"
        android:layout_alignBottom="@id/time_due_button"
        android:gravity="left|center_vertical"
        android:layout_alignParentRight="true"
        android:layout_below="@id/due_date_text"
        android:layout_toRightOf="@id/time_due_button"
        android:textSize="17sp"
        customfont:name="Roboto-Light.ttf" />

    <com.scratch.gui.custom.CustomButton
        android:id="@+id/recurrence_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/time_due_button"
        android:layout_marginTop="10dip"
        android:onClick="recurrenceButtonClicked"
        android:text="@string/change_recurrence_button"
        android:textSize="15sp"
        customfont:name="Roboto-Light.ttf" />

    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/recurrence_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/recurrence_button"
        android:layout_alignParentRight="true"
        android:layout_below="@id/time_due_text"
        android:layout_marginTop="10dip"
        android:layout_toRightOf="@id/recurrence_button"
        android:gravity="left|center_vertical"
        android:textSize="17sp"
        customfont:name="Roboto-Light.ttf" />

    <com.scratch.gui.custom.CustomButton
        android:id="@+id/reminder_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/recurrence_button"
        android:layout_marginTop="10dip"
        android:onClick="reminderDateButtonClicked"
        android:text="@string/reminder_date_button"
        android:textSize="15sp"
        customfont:name="Roboto-Light.ttf" />

    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/reminder_date_text"
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/reminder_date_button"
        android:layout_below="@id/recurrence_text"
        android:layout_marginTop="10dip"
        android:layout_toRightOf="@id/reminder_date_button"
        android:gravity="left|center_vertical"
        android:textSize="17sp"
        customfont:name="Roboto-Light.ttf" />

    <ViewStub
        android:id="@+id/cancel_reminder_date_button_stub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/reminder_date_button"
        android:layout_toRightOf="@id/reminder_date_text"
        android:inflatedId="@+id/cancel_reminder_date_button_inflated"
        android:layout="@layout/cancel_reminder_date_button_layout"
        android:scaleType="center" />

    <com.scratch.gui.custom.CustomButton
        android:id="@+id/reminder_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/reminder_date_button"
        android:onClick="reminderTimeButtonClicked"
        android:text="@string/reminder_time_button"
        android:textSize="15sp"
        customfont:name="Roboto-Light.ttf" />

    <com.scratch.gui.custom.CustomTextView
        android:id="@+id/reminder_time_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/reminder_time_button"
        android:layout_alignParentRight="true"
        android:layout_below="@id/reminder_date_text"
        android:layout_toRightOf="@id/reminder_time_button"
        android:gravity="left|center_vertical"
        android:textSize="17sp"
        customfont:name="Roboto-Light.ttf" />

</RelativeLayout>